exports[`Test contact list reducer handles CHANGE_LIST_MODE action 1`] = `
Object {
  "contacts": Array [],
  "loading": false,
  "mode": "card",
  "orderBy": "name",
}
`;

exports[`Test contact list reducer handles CHANGE_LIST_MODE without send new mode action 1`] = `
Object {
  "contacts": Array [],
  "loading": false,
  "mode": "list",
  "orderBy": "name",
}
`;

exports[`Test contact list reducer handles INITIALIZE_CONTACT_LIST action 1`] = `
Object {
  "contacts": Array [
    Object {
      "email": "test@test.com",
      "id": "-1",
      "imgUrl": "http://www.test.image.com",
      "name": "Tester",
      "phoneNumber": "666666666",
    },
    Object {
      "email": "test2@test.com",
      "id": "-2",
      "imgUrl": "http://www.test2.image.com",
      "name": "Tester2",
      "phoneNumber": "766666666",
    },
  ],
  "loading": false,
  "mode": "list",
  "orderBy": "name",
}
`;

exports[`Test contact list reducer handles LOADING_CONTACT_LIST action 1`] = `
Object {
  "contacts": Array [],
  "loading": true,
  "mode": "list",
  "orderBy": "name",
}
`;

exports[`Test contact list reducer returns the initialState state on an undefined state 1`] = `
Object {
  "contacts": Array [],
  "loading": false,
  "mode": "list",
  "orderBy": "name",
}
`;

exports[`Test contact list reducer returns the same state on an unhandled action 1`] = `
Object {
  "contacts": Array [],
  "loading": false,
  "mode": "list",
  "orderBy": "name",
}
`;
